--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "@types/three": "^0.176.0",
+    "@typescript-eslint/parser": "^8.32.1",
     "ajv": "^8.17.1",
     "axios": "^1.7.9",
     "locomotive-scroll": "^5.0.0-beta.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
     "three": "^0.167.1"
