--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "ajv": "^8.17.1",
     "axios": "^1.7.9",
     "locomotive-scroll": "^5.0.0-beta.21",
+    "lucide-react": "^0.524.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
     "three": "^0.167.1"
